adding modified Books/css/style.css and Books/src/Index.html, and new Books/css/mobile-style.css and Books/src/main.js

--- a/Books/css/style.css
+++ b/Books/css/style.css
@@ -63,7 +63,7 @@ header .nav-item {
     padding: 0.9em;
 }
 
-header .navbar-brand {
+header .navbar-brand .navbar-expand-lg {
     padding-left: 8rem;
 }
 
@@ -315,3 +315,42 @@ header .container .col-md-7 button {
     border-radius: 340px;
     width: 60%;
 }
+
+/* Footer */
+
+footer {
+    background: rgba(0, 0, 0, 0.815);
+    overflow-x: hidden;
+    padding: 14vmin 18vmin;
+}
+
+footer p>span {
+    color: #ff512f;
+}
+
+footer input {
+    border: none !important;
+}
+
+footer input::placeholder {
+    color: white !important;
+}
+
+footer .input-group .input-group-text {
+    background: var(--bggradient);
+    border: none;
+}
+
+footer .column i {
+    color: #dd2476;
+}
+
+footer .column i+i {
+    padding: 0 0.5em;
+}
+
+.section-3 .platform {
+    display: inline-block;
+}
+
+/* Sticky class */
