adding modified Books/css/style.css

--- a/Books/css/style.css
+++ b/Books/css/style.css
@@ -349,8 +349,8 @@ footer .column i+i {
     padding: 0 0.5em;
 }
 
-.section-3 .platform {
+/* .section-3 .platform {
     display: inline-block;
-}
+} */
 
 /* Sticky class */
