--- a/Books/css/style.css
+++ b/Books/css/style.css
@@ -354,3 +354,11 @@ footer .column i+i {
 } */
 
 /* Sticky class */
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.815);
+    z-index: 9999;
+    transition: all 1.5s ease;
+}
