--- a/Bootstrap 4/13_Museum_Of_Candy/Starter/app.css
+++ b/Bootstrap 4/13_Museum_Of_Candy/Starter/app.css
@@ -19,3 +19,14 @@ body {
 #mainNavBar .navbar-brand {
     color: #EA1C2C;
 }
+
+#headingGroup span {
+    color: #EA1C2C;
+}
+
+@media (max-width: 1200px) {
+    #headingGroup h1 {
+        font-weight: 100;
+        font-size: 3rem;
+    }
+}
