--- a/Bootstrap 4/13_Museum_Of_Candy/Starter/app.css
+++ b/Bootstrap 4/13_Museum_Of_Candy/Starter/app.css
@@ -3,6 +3,23 @@ body {
     font-family: "Nunito", sans-serif;
 }
 
+.blurb h2 {
+    color: #EA1C2C;
+    font-weight: 100;
+    font-size: 2rem;
+}
+
+.blurb p {
+    color: #f498b8;
+    font-weight: 100;
+    font-size: 1.1rem;
+    line-height: 2;
+}
+
+.content {
+    margin-top: 100px;
+}
+
 #mainNavBar {
     font-size: 1.5rem;
     font-weight: 100;
@@ -22,6 +39,11 @@ body {
 
 #headingGroup span {
     color: #EA1C2C;
+}
+
+#headingGroup h1 {
+    font-weight: 100;
+    font-size: 4rem;
 }
 
 @media (max-width: 1200px) {
